# sirr

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  PENTEST.md  README.md  llms.txt
.github/workflows/: ci.yml  release.yml
crates/sirr/: Cargo.toml
crates/sirr-server/: Cargo.toml
crates/sirr-server/src/: auth.rs  handlers.rs  lib.rs  license.rs  org_handlers.rs  server.rs  validator.rs  webhooks.rs
crates/sirr-server/src/store/: api_keys.rs  audit.rs  crypto.rs  db.rs  mod.rs  model.rs  permissions.rs  webhooks.rs
crates/sirr/src/: main.rs
crates/sirrd/: Cargo.toml
crates/sirrd/src/: main.rs
