[package]
name = "sirrd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sirrd — ephemeral secret vault server daemon"
default-run = "sirrd"

[[bin]]
name = "sirrd"
path = "src/main.rs"

[dependencies]
sirr-server = { path = "../sirr-server" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2"
